Creacion de los inputs, checkbox, y del menu

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,6 +11,62 @@
     <title>Logica Proposicional</title>
 </head>
 <body>
-    
+    <header>
+        <h1 class="header__titulo">Logica Proposicional</h1>
+        <nav class="header__navbar">
+            <ul class="navbar__menu">
+                <li class="menu__opc"><a href="">¿Qué es?</a></li>
+                <li class="menu__opc"><a href="">Ejemplo</a></li>
+                <li class="menu__opc"><a href="">Código</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <div>
+                <h2>Diagrama</h2>
+                <h3>Sentencias</h3>
+                <h3>Verdadero / Falso</h3>
+            </div>
+            <div>
+                <label for="" class="">
+                    <input type="text">
+                    <input type="checkbox">
+                </label>
+                <label for="">
+                    <input type="text">
+                    <input type="checkbox">
+                </label>
+                <label for="">
+                    <input type="text">
+                    <input type="checkbox">
+                </label>
+                <label for="">
+                    <input type="text">
+                    <input type="checkbox">
+                </label>
+                <label for="">
+                    <input type="text">
+                    <input type="checkbox">
+                </label>
+            </div>
+            <div>
+                <label for="">
+                    <input type="text">
+                </label>
+                <button type="button"></button>
+            </div>
+            <div>
+                <label for="">
+                    <input type="text">
+                </label>
+                <button type="button"></button>
+                <button type="button"></button>
+            </div>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
