--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <!-- <main>
         <div>
             <div>
                 <h2>Diagrama</h2>
@@ -64,7 +64,7 @@
                 <button type="button"></button>
             </div>
         </div>
-    </main>
+    </main> -->
     <footer>
 
     </footer>
