Se añadio lso botones de limpiar y ejecutar

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -88,11 +88,14 @@
                         </label>
                     </div>
                 </div>
+                <div class="contenedor__botones">
+                    <button class="botones" id="limpiar">Limpiar</button>
+                    <button class="botones" id="ejecutar">Ejecutar</button>
+                </div>
             </div>
             <div class="contenedor__respuestas">
                 <div>
-                    <label for="">
-                        <input type="text">
+                    <label>
                     </label>
                     <button type="button" onclick="prueba()"></button>
                     <p id="respuesta">aaa</p>
