Se creo la funcion ejecutar

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="contenedor__botones">
                     <button class="botones" id="limpiar" type="button" onclick="clean()">Limpiar</button>
-                    <button class="botones" id="ejecutar" type="button">Ejecutar</button>
+                    <button class="botones" id="ejecutar" type="button" onclick="execute()">Ejecutar</button>
                 </div>
             </div>
             <div class="contenedor__respuestas">
