--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <script src="../JS/index.js" type="module"></script>
     <title>Logica Proposicional</title>
 </head>
 <body>
@@ -89,8 +88,8 @@
                     </div>
                 </div>
                 <div class="contenedor__botones">
-                    <button class="botones" id="limpiar" type="button" onclick="clean()">Limpiar</button>
-                    <button class="botones" id="ejecutar" type="button" onclick="execute()">Ejecutar</button>
+                    <button class="botones" id="limpiar" type="button" onclick="clean()" >Limpiar</button>
+                    <button class="botones" id="ejecutar" type="button" onclick="execute()" >Ejecutar</button>
                 </div>
             </div>
             <div class="contenedor__respuestas">
@@ -116,5 +115,6 @@
     <footer>
 
     </footer>
+    <script src="../JS/index.js"></script>
 </body>
 </html>
