--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <script src="../JS/index.js" type="module"></script>
+    <script type="module" src="index.js"></script>
     <title>Logica Proposicional</title>
 </head>
 <body>
