Se creo la funcion evaluar

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -96,7 +96,7 @@
                 <div class="respuesta__wff">
                     <div class="wff__titulo">
                         <h2>Formula WFF</h2><br>
-                        <button id="boton--evaluar" type="button" onclick="prueba()">Evaluar</button>
+                        <button id="boton--evaluar" type="button" onclick="evaluar()">Evaluar</button>
                     </div>
                     <label id="wff">
                     </label>
