Obtener valor de los checkbox, y validar el simbolo not

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -43,7 +43,7 @@
                         </label>
                         <!-- Rounded switch -->
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox" id="valor_p">
                             <span class="slider round"></span>
                         </label>
                     </div>
@@ -54,7 +54,7 @@
                         </label>
                         <!-- Rounded switch -->
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox" id="valor_q">
                             <span class="slider round"></span>
                         </label>
                     </div>
@@ -65,7 +65,7 @@
                         </label>
                         <!-- Rounded switch -->
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox" id="valor_r">
                             <span class="slider round"></span>
                         </label>
                     </div>
@@ -76,7 +76,7 @@
                         </label>
                         <!-- Rounded switch -->
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox" id="valor_s">
                             <span class="slider round"></span>
                         </label>
                     </div>
