Se oculto el menu

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,11 +18,11 @@
     <header>
         <h1 class="header__titulo">Logica Proposicional</h1>
         <nav class="header__navbar">
-            <ul class="navbar__menu">
+            <!-- <ul class="navbar__menu">
                 <li class="menu__opc"><a href="">¿Qué es?</a></li>
                 <li class="menu__opc"><a href="">Ejemplo</a></li>
                 <li class="menu__opc"><a href="">Código</a></li>
-            </ul>
+            </ul> -->
         </nav>
     </header>
     <main>
